syntax = "proto3";

package userservice;

option go_package = ".;userservice";

// ユーザー
message User {
  uint32 user_id = 1;
  string user_name = 2;
  string password = 3;
  string profile_text = 4;
  string email = 5;
  uint32 authority = 6;
}

// ユーザープロフィール
message UserProfile {
  uint32 user_id = 1;
  string user_name = 2;
  string profile_text = 3;
  uint32 authority = 4;
}

message Auth {
  string token =1;
  uint32 user_id=2;
  uint32 authority=3;
}

// レスポンスのステータス
message ResponseStatus{
  string code =1;
}

message CreateUserRequest {
  User user=1;
}

message CreateUserResponse {
  ResponseStatus status=1;
}

message ReadUserRequest {
  uint32  user_id=1;
}

message ReadUserResponse {
  User user=1;
}

message UpdateUserRequest {
  User user=1;
}

message UpdateUserResponse {
  ResponseStatus status=1;
}

message DeleteUserRequest {
  uint32 user_id=1;
}

message DeleteUserResponse {
  ResponseStatus status=1;
}

message ListCompanyRequest {
}

message ListCompanyResponse {
  repeated UserProfile profile=1;
}

message ListUserRequest {
}

message ListUserResponse {
  repeated UserProfile profile=1;
}

message LoginRequest {
  string email=1;
  string password=2;
}

message LoginResponse {
  Auth auth=1;
}

message TokenAuthRequest {
  string token=1;
}

message TokenAuthResponse {
  User user=1;
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc ReadUser(ReadUserRequest) returns (ReadUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  // ListCompany 廃止予定
  rpc ListCompany(ListCompanyRequest) returns (ListCompanyResponse);
  rpc ListUser(ListUserRequest) returns (ListUserResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc TokenAuth(TokenAuthRequest) returns (TokenAuthResponse);
}
